css/lynnstyles.css
/* ... */
.panel-heading, .panel-body p {
	background-image:none!important;
	font-size:1em;
	}
/* HEADLINE BACKGROUND */
.card-text {
	margin-bottom:24px;
	border-bottom: 2px solid #004C97;
    background-color: #D9D9D6;
    margin-top: 30px;
    margin-bottom: 20px;
    padding: 5px 0 5px 18px;
    border-bottom-left-radius: 2px;
    border-top-left-radius: 2px;
    border-top-right-radius: 2px;
	}
.card-text.noexpand {
    padding: 6px 0 6px 18px;
	}
#payment .card-text.noexpand {
    background-color:#EEEEEE;
	padding: 0 0 0 15px;
	}
.card-text.noexpand .rowheader h3 {
    font-weight:normal;
	font-size:.7em;
    line-height: 1.16em;
	padding: .8em;
	min-height: 40px;
	padding-right: 0;
	}
.card-text.noexpand .rowheader p {
	font-size:.8em;
	background-color: #fff;
	min-height: 32px;
    padding: .7em;
	margin-bottom:0;
	padding-right: 0;
	}
.rowheader h3.morepad {
	padding-left: 1.4em!important;
	}
.rowheader p.morepad {
	padding-left: 1.2em!important;
	}
.rowheader div {
	padding:0;
	margin:0;
	padding-top: .5em;
	}
.noexpand.blue {
    background-color: #004C97;
    color: #fff;
	}
.leadtext {
    margin-top: 30px;
    margin-bottom: 20px;
    padding: 8px 0 8px 0;
	max-width: 31.25em;
	}
#editowner .leadtext, #reviewattorney .leadtext {
    margin-top: 30px;
    margin-bottom: 20px;
    padding: 8px 15px 8px 15px;
	}
#payment .leadtext {
	font-size:inherit;
	}
#reviewapplication .leadtext {
	margin-top:0;
	}
p#lead {
	margin-bottom:0;
	font-weight:600!important;
	}
.weight600 {
	font-weight:600;
	}
.disclaim p {
	margin-bottom:0;
	}
span.weight600 {
	font-weight:normal;
	}
#success span.weight600, #responseamend span.weight600 {
	color:#333;
	font-weight:600;
	}
.required {
	margin-top:1em;
	}
.material-icons {
	top:4px!important;
	}
/*FORMS*/
fieldset {
    min-width: 100%;
	}
.form-group {
	margin-top: 1em;
	}
.disclaim .form-group {
	margin-bottom: 0;
	}
.disclaim .form-inline .form-group {
	margin-bottom: 1.5em;
	margin-top: 1.5em;
	}
#responseamend .inlinebuttons {
	margin-top: 2em;
	}
.control-label {
	text-align:left!important;
	}
.checkbox-inline, .radio-inline {
    padding-left: 21px;
	}
input[type="date"]::-webkit-inner-spin-button, input[type=month]::-webkit-inner-spin-button {
    -webkit-appearance: none;
    display: none;
	}
.disabled {
	cursor: url('../images/cursor_not_allowed.png'), auto!important;
	}
a.disabled, a.disabled span {
	cursor: url('../images/cursor_not_allowed.png'), auto!important;
	color: #cdd8dc;
	}
a.disabled:hover, a.disabled:active, a.disabled span:hover,  a.disabled span:active {
	text-decoration: none;
	color: #cdd8dc!important;
	}
label {
    font-weight: 400;
	font-size:inherit;
	margin-bottom: .6em;
	line-height: 1.5em;
	}
.bluedit{
    position:absolute;
	top: 31%;
	right: 10%;
    outline: none;
	color:#009CDE;
	margin-left:-40px;
	-webkit-transition: all .5s ease;
	-moz-transition: all .5s ease;
	transition: all .5s ease;
}
label.save {
	margin-top: .4em;
	}
p.savep {
	display:inline-block;
	}
label.hasinfo {
	display:inline-block;
	margin-right:.5em;
	margin-bottom: 0;
    margin-top: 0;
	}
.badge {
	line-height: inherit;
	}
#upimgtwo {
	padding: .81em;
	}
#upimgtwo span {
	line-height: 1.8em;
	}
.visuallyhidden {
	visibility:hidden!important;
	}
.visuallyshown {
	visibility:visible!important;
	}
.visuallyremoved {
	display:none!important;
	}
.visuallyadded {
	display:inline-block!important;
	}
.visuallyaddedblock {
	display:block!important;
	}
.phone, .phones {
	padding-left:0!important;
	padding-right:0!important;
	}
#payment .form-inline input, #payment .form-inline select {
	float:right;
	width:50%;
	}
#payment .form-inline label {
	vertical-align:middle;
	margin-bottom:0;
	margin-top:.6em;
	}
#reviewapplication ul li {
	height:2em;
	}
#reviewapplication .overline {
	margin-top:1em;
	}
/*SCROLL*/
#scrollone {
	/*overflow: scroll;*/
	max-height:300px;
	margin:auto 5%;
	overflow:auto;
	overflow-y:auto;
	overflow-x:auto;
	}
#responseamendreview #scrollone {
	margin:auto 0;
	margin-right:15px;
	max-height:320px;
	}	
	#scrollone::-webkit-scrollbar {
	  width: 1em;
	}
	#scrollone::-webkit-scrollbar-track {
	  background: #bbb; 
	}
	#scrollone::-webkit-scrollbar-thumb {
	  background: #808080; 
	}
	#scrollone::-webkit-scrollbar-thumb:hover {
	  background: #004C97; 
	}
/*BUTTONS*/
.btn-success.disabled, .btn-success.disabled.active, .btn-success.disabled.focus, .btn-success.disabled:active, .btn-success.disabled:focus, .btn-success.disabled:hover, .btn-success[disabled], .btn-success[disabled].active, .btn-success[disabled].focus, .btn-success[disabled]:active, .btn-success[disabled]:focus, .btn-success[disabled]:hover, fieldset[disabled] .btn-success, fieldset[disabled] .btn-success.active, fieldset[disabled] .btn-success.focus, fieldset[disabled] .btn-success:active, fieldset[disabled] .btn-success:focus, fieldset[disabled] .btn-success:hover {
    background-color: #cdd8dc!important;
	cursor: url('../images/cursor_not_allowed.png'), auto!important;
	}
.inlinebuttons {
	margin:0 auto;
	position:relative;
	width:100%;
	}
.modal .inlinebuttons .btn-group button {
	margin:0 1em;
	width:90%;
	}
.modal .inlinebuttons {
	margin-bottom:.6em;
	}
.inlinebuttons#prevnxt {
	width:200px;
	margin-right: 0;
	}
#editowner .inlinebuttons {
	margin-right: 0;
	margin-left:0;
	padding-right:0;
	}
#reviewattorney .inlinebuttons {
	height: 83px;
	width: auto;
	}
#editowner .btn-success.add, #reviewattorney .btn-success.add {
    margin-top: 1.99993em;
	padding: 5px 10px;
	}
#editowner .btn-group {
	width:40px;
	}
#editowner .btn-group .close {
	padding-left:.2em;
	}
#editowner .btn-success {
    padding: 5px 5px;
	}
#reviewattorney .btn-success {
    padding: 5px 10px;
	}
#editowner .btn-group > .btn:last-child, #reviewattorney .btn-group > .btn:last-child, #userprofilepage .btn-group > .btn:last-child {
	border-radius: 3px;
	}
.inlinebuttons button {
	margin:0 auto;
	}
/* ... */

